Added Google map without API for future Reference, deleting later for other trying with Platform

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,13 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation "com.google.maps.android:maps-compose:2.11.4"
+    implementation "com.google.android.gms:play-services-maps:18.1.0"
+
+    // Optional Util Library
+    implementation "com.google.maps.android:maps-compose-utils:2.11.4"
+    implementation 'com.google.maps.android:maps-compose-widgets:2.11.4'
+
+    // Optional Accompanist permissions to request permissions in compose
+    implementation "com.google.accompanist:accompanist-permissions:0.31.5-beta"
 }
