--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
@@ -17,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Geofencing"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDld3KTpWgb4o95IlG7-HFJw-Y096C7g4I" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -33,10 +37,11 @@
             android:name=".BackgroundService"
             android:enabled="true" />
 
-        <receiver android:name=".ServiceRestarterBroadcastReceiver"
+        <receiver
+            android:name=".ServiceRestarterBroadcastReceiver"
             android:enabled="true"
             android:exported="true"
-            android:label="RestartServiceWhenStop"/>
+            android:label="RestartServiceWhenStop" />
 
     </application>
 
