--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:screenOrientation="locked"
             android:theme="@style/Theme.Geofencing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
