--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,22 +10,22 @@
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
+        android:name="dev.harsh.tradow.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:name=".App"
         android:supportsRtl="true"
         android:theme="@style/Theme.Geofencing"
         tools:targetApi="31">
         <activity
-            android:windowSoftInputMode="adjustResize"
-            android:name=".MainActivity"
+            android:name="dev.harsh.tradow.MainActivity"
             android:exported="true"
             android:screenOrientation="locked"
-            android:theme="@style/Theme.Geofencing">
+            android:theme="@style/Theme.Geofencing"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,9 +34,9 @@
         </activity>
 
         <service
-            android:name=".service.BackgroundService"
-            android:foregroundServiceType="location"
-            android:enabled="true" />
+            android:name="dev.harsh.tradow.service.BackgroundService"
+            android:enabled="true"
+            android:foregroundServiceType="location" />
 
     </application>
 
