--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,15 +41,28 @@
         <service
             android:name="dev.harsh.tradow.quicksetting.TrackingQsTile"
             android:enabled="true"
-            android:icon="@drawable/location"
-            android:roundIcon="@drawable/location"
             android:exported="true"
+            android:icon="@drawable/location"
             android:label="Start Tradow tracking"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:roundIcon="@drawable/location">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
+
+        <receiver
+            android:name="dev.harsh.tradow.widget.TradowWidgetReceiver"
+            android:exported="true"
+            android:label="Tradow tracking">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/app_widget_provider" />
+        </receiver>
+
     </application>
 
 </manifest>
