--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ activity-compose = "1.8.2"
 androidx-junit = "1.1.5"
 core-ktx = "1.12.0"
 espresso-core = "3.5.1"
+glanceVersion = "1.1.0-alpha01"
 gson = "2.10"
 junit = "4.13.2"
 lifecycle-runtime-ktx = "2.7.0"
@@ -21,6 +22,8 @@ accompanist-permissions = { module = "com.google.accompanist:accompanist-permiss
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
 androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
+androidx-glance = { module = "androidx.glance:glance", version.ref = "glanceVersion" }
+androidx-glance-appwidget = { module = "androidx.glance:glance-appwidget", version.ref = "glanceVersion" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "material-icons-extended" }
